# password-strength-checker

./: README.md  pyproject.toml
projects/: README.md  password_checker.py
